Major update of ChemSlate

--- a/config.json
+++ b/config.json
@@ -87,7 +87,7 @@
             ["mtext",{"tex":["Xe"]},"Xe"]  
         ]
     },
-        {"label":"Cs-Rn",
+    {"label":"Cs-Rn",
         "tools":[
             ["mtext",{"tex":["Cs"]},"Cs"],
             ["mtext",{"tex":["Ba"]},"Ba"],
@@ -110,6 +110,100 @@
             ["mtext",{"tex":["At"]},"At"],
             ["mtext",{"tex":["Rn"]},"Rn"]  
         ]
+    },
+    {"label":"Fr-Uuo",
+        "tools":[
+            ["mtext",{"tex":["Fr"]},"Fr"],
+            ["mtext",{"tex":["Ra"]},"Ra"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["Lr"]},"Lr"],
+            ["mtext",{"tex":["Rf"]},"Rf"],
+            ["mtext",{"tex":["Db"]},"Db"],  
+            ["mtext",{"tex":["Sg"]},"Sg"],
+            ["mtext",{"tex":["Bh"]},"Bh"],
+            ["mtext",{"tex":["Hs"]},"Hs"],
+            ["mtext",{"tex":["Mt"]},"Mt"],
+            ["mtext",{"tex":["Ds"]},"Ds"],
+            ["mtext",{"tex":["Rg"]},"Rg"],
+            ["mtext",{"tex":["Cn"]},"Cn"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["Uut"]},"Uut"],
+            ["mtext",{"tex":["Fl"]},"Fl"],  
+            ["mtext",{"tex":["Uup"]},"Uup"],
+            ["mtext",{"tex":["Lv"]},"Lv"],
+            ["mtext",{"tex":["Uus"]},"Uus"],
+            ["mtext",{"tex":["Uuo"]},"Uuo"]  
+        ]
+    },
+    {"label":"La-Yb",
+        "tools":[
+            ["mtext",{"tex":["La"]},"La"],
+            ["mtext",{"tex":["Ce"]},"Ce"],
+            ["mtext",{"tex":["Pr"]},"Pr"],
+            ["mtext",{"tex":["Nd"]},"Nd"],
+            ["mtext",{"tex":["Pm"]},"Pm"],  
+            ["mtext",{"tex":["Sm"]},"Sm"],
+            ["mtext",{"tex":["Eu"]},"Eu"],
+            ["mtext",{"tex":["Gd"]},"Gd"],
+            ["mtext",{"tex":["Tb"]},"Tb"],
+            ["mtext",{"tex":["Dy"]},"Dy"],
+            ["mtext",{"tex":["Ho"]},"Ho"],
+            ["mtext",{"tex":["Er"]},"Er"],
+            ["mtext",{"tex":["Tm"]},"Tm"],  
+            ["mtext",{"tex":["Yb"]},"Yb"]
+        ]
+    },
+    {"label":"Ac-No",
+        "tools":[
+            ["mtext",{"tex":["Ac"]},"Ac"],
+            ["mtext",{"tex":["Th"]},"Th"],
+            ["mtext",{"tex":["Pa"]},"Pa"],
+            ["mtext",{"tex":["U"]},"U"],
+            ["mtext",{"tex":["Np"]},"Np"],  
+            ["mtext",{"tex":["Pu"]},"Pu"],
+            ["mtext",{"tex":["Am"]},"Am"],
+            ["mtext",{"tex":["Cm"]},"Cm"],
+            ["mtext",{"tex":["Bk"]},"Bk"],
+            ["mtext",{"tex":["Cf"]},"Cf"],
+            ["mtext",{"tex":["Es"]},"Es"],
+            ["mtext",{"tex":["Fm"]},"Fm"],
+            ["mtext",{"tex":["Md"]},"Md"],  
+            ["mtext",{"tex":["No"]},"No"]
+        ]
+    },
+    {"label":"<math><mn>1</mn><mn>2</mn><mn>3</mn></math>",
+        "tools":[
+            ["mtext",{"tex":["1"]},"1"],
+            ["mtext",{"tex":["2"]},"2"],
+            ["mtext",{"tex":["3"]},"3"],
+            ["mtext",{"tex":["4"]},"4"],
+            ["mtext",{"tex":["5"]},"5"],
+            ["mtext",{"tex":["6"]},"6"],
+            ["mtext",{"tex":["7"]},"7"],
+            ["mtext",{"tex":["8"]},"8"],
+            ["mtext",{"tex":["9"]},"9"],
+            ["mtext",{"tex":["0"]},"0"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["I"]},"I"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["II"]},"II"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["III"]},"III"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["IV"]},"IV"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["V"]},"V"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["VI"]},"VI"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["VII"]},"VII"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["VIII"]},"VIII"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["IX"]},"IX"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":[""]},"X"]
+         ]
     },
     {"label":"ops",
         "tools":[
@@ -134,41 +228,61 @@
             ["mtext",{"tex":["(s)"]},"(s)"],
             ["mtext",{"tex":["(l)"]},"(l)"],
             ["mtext",{"tex":["(g)"]},"(g)"],
-            ["mtext",{"tex":["(aq)"]},"(aq)"]
+            ["mtext",{"tex":["(aq)"]},"(aq)"],
+            ["mtext",{"tex":[" ^ "]},"↑"],
+            ["mtext",{"tex":[" v "]},"↓"]
         ]
     },
-    {"label":"oxid",
+    {"label":"+ 2+ 3+",
         "tools":[
             ["mtext",{"tex":["+"]},"+"],
+            ["mtext",{},"&nbsp;"],
             ["mtext",{"tex":["2+"]},"2+"],
+            ["mtext",{},"&nbsp;"],
             ["mtext",{"tex":["3+"]},"3+"],
+            ["mtext",{},"&nbsp;"],
             ["mtext",{"tex":["4+"]},"4+"],
-            ["mtext",{"tex":["-"]},"-"],
-            ["mtext",{"tex":["2-"]},"2-"],
-            ["mtext",{"tex":["3-"]},"3-"],
-            ["mtext",{"tex":["4-"]},"4-"],
-            ["mtext",{"tex":["I"]},"I"],
-            ["mtext",{"tex":["II"]},"II"],
-            ["mtext",{"tex":["III"]},"III"],
-            ["mtext",{"tex":["IV"]},"IV"],
-            ["mtext",{"tex":["V"]},"V"],
-            ["mtext",{"tex":["VI"]},"VI"],
-            ["mtext",{"tex":["VII"]},"VII"]
-        ]
-    },
-    {"label":"<math><mn>1</mn><mn>2</mn><mn>3</mn></math>",
-        "tools":[
-            ["mtext",{"tex":["1"]},"1"],
-            ["mtext",{"tex":["2"]},"2"],
-            ["mtext",{"tex":["3"]},"3"],
-            ["mtext",{"tex":["4"]},"4"],
-            ["mtext",{"tex":["5"]},"5"],
-            ["mtext",{"tex":["6"]},"6"],
-            ["mtext",{"tex":["7"]},"7"],
-            ["mtext",{"tex":["8"]},"8"],
-            ["mtext",{"tex":["9"]},"9"],
-            ["mtext",{"tex":["0"]},"0"]
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["-"]},"−"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["2-"]},"2−"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["3-"]},"3−"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["4-"]},"4−"]
          ]
+    },
+    {"label":"+1 +2",
+        "tools":[
+            ["mtext",{"tex":["+1"]},"+1"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["+2"]},"+2"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["+3"]},"+3"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["+4"]},"+4"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["+5"]},"+5"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["+6"]},"+6"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["+7"]},"+7"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["-1"]},"−1"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["-2"]},"−2"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["-3"]},"−3"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["-4"]},"−4"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["-5"]},"−5"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["-6"]},"−6"],
+            ["mtext",{},"&nbsp;"],
+            ["mtext",{"tex":["-7"]},"−7"],
+            ["mtext",{},"&nbsp;"]
+        ]
     },
     {"label":"<math><mi>&#x03B1;</mi><mi>&#x03B2;</mi><mi>&#x03B3;</mi></math>",
         "tools":[
@@ -226,36 +340,6 @@
             ["mi",{"tex":["\\Omega"]},"Ω"]
         ]
     },
-    {"label":"<math><mi>A</mi><mi>B</mi><mi>C</mi></math>",
-        "tools":[
-            ["mi",{},"A"],
-            ["mi",{},"B"],
-            ["mi",{},"C"],
-            ["mi",{},"D"],
-            ["mi",{},"E"],
-            ["mi",{},"F"],
-            ["mi",{},"G"],
-            ["mi",{},"H"],
-            ["mi",{},"I"],
-            ["mi",{},"J"],
-            ["mi",{},"K"],
-            ["mi",{},"L"],
-            ["mi",{},"M"],
-            ["mi",{},"N"],
-            ["mi",{},"O"],
-            ["mi",{},"P"],
-            ["mi",{},"Q"],
-            ["mi",{},"R"],
-            ["mi",{},"S"],
-            ["mi",{},"T"],
-            ["mi",{},"U"],
-            ["mi",{},"V"],
-            ["mi",{},"W"],
-            ["mi",{},"X"],
-            ["mi",{},"Y"],
-            ["mi",{},"Z"]
-        ]
-    },
     {"label":"<math><mi>a</mi><mi>b</mi><mi>c</mi></math>",
         "tools":[
             ["mi",{},"a"],
@@ -286,7 +370,37 @@
             ["mi",{},"z"]
         ]
     },
-    {"label":"arrows",
+    {"label":"<math><mi>A</mi><mi>B</mi><mi>C</mi></math>",
+        "tools":[
+            ["mi",{},"A"],
+            ["mi",{},"B"],
+            ["mi",{},"C"],
+            ["mi",{},"D"],
+            ["mi",{},"E"],
+            ["mi",{},"F"],
+            ["mi",{},"G"],
+            ["mi",{},"H"],
+            ["mi",{},"I"],
+            ["mi",{},"J"],
+            ["mi",{},"K"],
+            ["mi",{},"L"],
+            ["mi",{},"M"],
+            ["mi",{},"N"],
+            ["mi",{},"O"],
+            ["mi",{},"P"],
+            ["mi",{},"Q"],
+            ["mi",{},"R"],
+            ["mi",{},"S"],
+            ["mi",{},"T"],
+            ["mi",{},"U"],
+            ["mi",{},"V"],
+            ["mi",{},"W"],
+            ["mi",{},"X"],
+            ["mi",{},"Y"],
+            ["mi",{},"Z"]
+        ]
+    },
+    {"label":"→ ← ⇌",
         "tools":[
             ["mtext",{"tex":["->"]},"⟶"],
             ["mtext",{"tex":["<-"]},"⟵"],
@@ -296,12 +410,10 @@
             ["mover",{"tex":["->[\\ce{",1,"}]"]},[["mtext",{},"⟶"],"[]"]],
             ["munderover",{"tex":["->[\\ce{",2,"}][\\text{",1,"}]"]},[["mtext",{},"⟶"],"[]","[]"]],
             ["mover",{"tex":["<=>[\\ce{",1,"}]"]},[["mtext",{},"⇌"],"[]"]],
-            ["munderover",{"tex":["<=>[\\ce{",2,"}][\\ce{",1,"}]"]},[["mtext",{},"⇌"],"[]","[]"]],
-            ["mtext",{"tex":[" ^ "]},"↑"],
-            ["mtext",{"tex":[" v "]},"↓"]
-        ]
+            ["munderover",{"tex":["<=>[\\ce{",2,"}][\\ce{",1,"}]"]},[["mtext",{},"⇌"],"[]","[]"]]
+         ]
     },
-    {"label":"bonds",
+    {"label":"− = ≡",
         "tools":[
             ["mtext",{"tex":["\\bond{-}"]},"−"],
             ["mtext",{"tex":["\\bond{=}"]},"="],
